<resources>
    <string name="app_name">BookStore</string>

    <!-- Label for overflow menu option that inserts fake book data into the app [CHAR LIMIT=20] -->
    <string name="action_insert_dummy_data">Insert book sample </string>

    <!-- Label for overflow menu option that deletes all book data in the app [CHAR LIMIT=20] -->
    <string name="action_delete_all_entries">Delete All books</string>

    <!-- Title text for the empty view, which describes the empty book shelf image [CHAR LIMIT=50] -->
    <string name="empty_view_title_text">It\'s a bit lonely here...</string>

    <!-- Subtitle text for the empty view that prompts the user to add a book [CHAR LIMIT=50] -->
    <string name="empty_view_subtitle_text">Get started by adding a book</string>

    <!-- Title for the activity to add a new book [CHAR LIMIT=20] -->
    <string name="editor_activity_title_new_book">Add a book</string>

    <!-- Title for the activity to edit an existing book [CHAR LIMIT=20] -->
    <string name="editor_activity_title_edit_book">Edit Book</string>

    <!-- Label for editor menu option to save book and leave editor [CHAR LIMIT=20] -->
    <string name="action_save">Save</string>

    <!-- Label for overview category of attributes in the editor [CHAR LIMIT=30] -->
    <string name="category_overview">Overview</string>

    <!-- Text hint for name field in the editor [CHAR LIMIT=30] -->
    <string name="hint_book_name">Name</string>

    <!-- Text hint for category field in the editor [CHAR LIMIT=30] -->
    <string name="hint_book_category">Category</string>

    <!-- Text hint for price field in the editor [CHAR LIMIT=30] -->
    <string name="hint_book_price">Price</string>

    <!-- Text units for price field in the editor ($)[CHAR LIMIT=30] -->
    <string name="units_book_price">$</string>

    <!-- Text units for quantity field in the editor ($)[CHAR LIMIT=30] -->
    <string name="units_book_quantity">book</string>

    <!-- Text hint for quantity field in the editor [CHAR LIMIT=30] -->
    <string name="hint_book_quantity">Quantity</string>

    <!-- Label for supplier information in the editor [CHAR LIMIT=30] -->
    <string name="supplier_info">Supplier</string>

    <!-- Label for supplier phone number in the editor [CHAR LIMIT=30] -->
    <string name="hint_supplier_number">Phone Number</string>

    <!-- Label for editor overflow menu option that deletes the current book [CHAR LIMIT=20] -->
    <string name="action_delete">Delete</string>

    <!-- Toast message in editor when new book has been successfully inserted [CHAR LIMIT=NONE] -->
    <string name="editor_insert_book_successful">book saved</string>

    <!-- Toast message in editor when new book has failed to be inserted [CHAR LIMIT=NONE] -->
    <string name="editor_insert_book_failed">Error with saving book</string>

    <!-- Toast message in editor when current book was successfully updated [CHAR LIMIT=NONE] -->
    <string name="editor_update_book_successful">Book updated</string>

    <!-- Toast message in editor when current book has failed to be updated [CHAR LIMIT=NONE] -->
    <string name="editor_update_book_failed">Error with updating book</string>

    <!-- Dialog message when user is leaving editor but hasn't saved changes [CHAR LIMIT=NONE] -->
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>

    <!-- Dialog button text for the option to discard a user's changes [CHAR LIMIT=20] -->
    <string name="discard">Discard</string>

    <!-- Dialog button text for the option to keep editing the current book [CHAR LIMIT=20] -->
    <string name="keep_editing">Keep Editing</string>

    <!-- Toast message in editor when current book was successfully deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_book_successful">Book deleted</string>

    <!-- Toast message in editor when current book has failed to be deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_book_failed">Error with deleting book</string>

    <!-- Dialog message to ask the user to confirm deleting the current book [CHAR LIMIT=NONE] -->
    <string name="delete_dialog_msg">Delete this book?</string>

    <!-- Dialog button text for the option to confirm deleting the current book [CHAR LIMIT=20] -->
    <string name="delete">Delete</string>

    <!-- Dialog button text for the option to cancel deletion of the current book [CHAR LIMIT=20] -->
    <string name="cancel">Cancel</string>


    <!-- Label for the book's breed if the breed is unknown [CHAR LIMIT=20] -->
    <string name="unknown_breed">Unknown breed</string>

    <!-- Label for supplier name in the editor [CHAR LIMIT=30] -->
    <string name="hint_supplier_name">Name</string>

    <string name="error_saving_book">Error with saving book</string>
    <string name="book_saved_successfully">book saved successfully</string>
    <string name="unknown_category">Unknown category</string>
    <string name="delete_all_books_dialog_msg">Are you sure you want to delete all books?</string>
    <string name="sale">sale</string>
    <string name="fields_not_filled">some fields needs to be filled</string>
</resources>
