<?xml version="1.0" encoding="utf-8"?><!-- Layout for the editor -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin"
    tools:context=".EditorActivity">

    <!-- Overview category -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            style="@style/CategoryStyle"
            android:text="@string/category_overview" />

        <!-- Input fields -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical"
            android:paddingLeft="4dp">

            <!-- Name field -->
            <EditText
                android:id="@+id/edit_book_name"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_book_name"
                android:inputType="textCapWords" />

            <!-- Price field -->
            <RelativeLayout
                android:layout_height="match_parent"
                android:layout_width="match_parent">

                <EditText
                    android:id="@+id/edit_book_price"
                    style="@style/EditorFieldStyle"
                    android:hint="@string/hint_book_price"
                    android:inputType="number" />

                <!-- Units for Price ($) -->
                <TextView
                    android:id="@+id/label_weight_units"
                    android:text="@string/units_book_price"
                    style="@style/EditorUnitsStyle"/>
            </RelativeLayout>

            <!-- Quantity field -->
            <EditText
                android:id="@+id/edit_book_quantity"
                style="@style/EditorFieldStyle"
                android:hint="@string/hint_book_quantity"
                android:inputType="number" />
        </LinearLayout>
    </LinearLayout>

    <!-- Supplier category -->
    <LinearLayout
        android:id="@+id/supplier_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            style="@style/CategoryStyle"
            android:text="@string/supplier_info" />

        <!-- Input fields -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical"
            android:paddingLeft="4dp">

                <!-- Supplier name field -->
                <EditText
                    android:id="@+id/edit_supplier_name"
                    style="@style/EditorFieldStyle"
                    android:hint="@string/hint_supplier_name"
                    android:inputType="textCapWords" />

                <!-- Supplier number field -->
                <EditText
                    android:id="@+id/edit_supplier_number"
                    style="@style/EditorFieldStyle"
                    android:hint="@string/hint_supplier_number"
                    android:inputType="number" />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>